@@ -206,7 +206,8 @@ struct player_type
 
 	s16b max_plv;		/* Max Player Level */
 	s16b max_dlv;		/* Max level explored */
-	s16b recall_depth;	/* which depth to recall to */
+//	s16b recall_depth;	/* which depth to recall to */
+	worldpos recall_pos;	/* which depth to recall to */
 
 	s16b stat_max[6];	/* Current "maximal" stat values */
 	s16b stat_cur[6];	/* Current "natural" stat values */
